@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [mms] SECURITY: Fix XSS vulnerability on smartmobile rule page (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Translate rule descriptions to the local language in UI.
 * [jan] Allow multiple addresses for Sieve redirects (it@wenn.com, Request #11457).
  </notes>
@@ -1207,6 +1208,7 @@
    <date>2013-02-18</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [mms] SECURITY: Fix XSS vulnerability on smartmobile rule page (João Machado &lt;geral@jpaulo.eu&gt;).
 * [mms] Translate rule descriptions to the local language in UI.
 * [jan] Allow multiple addresses for Sieve redirects (it@wenn.com, Request #11457).
    </notes>
